syntax = "proto3";

// P2P Onion Tunnel frame
message TunnelFrame {

  // an identifier for identifying the corresponding tunnel of this frame
  fixed64 frameId = 1;

  // HandshakeData | enc(ApplicationData) | enc(HandshakeData)
  oneof message {
    bytes data = 2;
    Close close = 3;
  }
}

message HandshakeData {
  oneof message {
    PlainHandshakeData handshakeData = 1;
    EncryptedHandshakeData encHandshakeData = 2;
  }
}

message PlainHandshakeData {
  // establish secure channel
  oneof message {
    ClientHello clientHello = 1;
    ServerHello serverHello = 2;
  }

  // unencrypted padding
  bytes padding = 3;
}

message ClientHello {
  // TODO fill
}

message ServerHello {
  // TODO fill
}

message EncryptedHandshakeData {
  bytes iv = 1;   // random, unpredictable iv used for encryption
  bytes data = 2; // this can be parsed into DecryptedHandshakeData afterwards
}

message DecryptedHandshakeData {

  // a secure random seed for generating iv's without iv transfer due to padding issues
  bytes secure_seed = 1;

  // exchange routing information
  // TODO fill
  bytes padding = 2;
}

message ApplicationData {


  bytes data = 1;

  bytes padding = 2;
}

message Close {
  bytes padding = 1;
}
